// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-document-properties should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error using update-document-properties:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The document could not be found",
    "status": 404,
    "operationStatus": "ContentNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-properties should return error on invalid alias 1`] = `
{
  "content": [
    {
      "text": "{
  "success": false,
  "error": "Invalid property aliases",
  "message": "The following properties do not exist on this document: nonExistentProperty",
  "invalidAliases": [
    "nonExistentProperty"
  ],
  "availableAliases": [
    {
      "alias": "title",
      "culture": null,
      "segment": null,
      "editorAlias": "Umbraco.TextBox"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-properties should update property and preserve initial value 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully updated 1 property value(s)",
  "updatedProperties": [
    "title"
  ],
  "document": {
    "template": {
      "id": "907d26a5-c929-4c69-bb1d-0d0d5342d6f6"
    },
    "isTrashed": false,
    "documentType": {
      "id": "00000000-0000-0000-0000-000000000000",
      "icon": "icon-home color-blue",
      "collection": null
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "flags": [],
    "values": [
      {
        "editorAlias": "Umbraco.TextBox",
        "culture": null,
        "segment": null,
        "alias": "title",
        "value": "_Updated Title"
      }
    ],
    "variants": [
      {
        "state": "Draft",
        "publishDate": null,
        "scheduledPublishDate": null,
        "scheduledUnpublishDate": null,
        "id": "00000000-0000-0000-0000-000000000000",
        "flags": [],
        "createDate": "NORMALIZED_DATE",
        "updateDate": "NORMALIZED_DATE",
        "culture": null,
        "segment": null,
        "name": "_Test Document Properties"
      }
    ]
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-properties should update property value twice 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully updated 1 property value(s)",
  "updatedProperties": [
    "title"
  ],
  "document": {
    "template": {
      "id": "907d26a5-c929-4c69-bb1d-0d0d5342d6f6"
    },
    "isTrashed": false,
    "documentType": {
      "id": "00000000-0000-0000-0000-000000000000",
      "icon": "icon-home color-blue",
      "collection": null
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "flags": [],
    "values": [
      {
        "editorAlias": "Umbraco.TextBox",
        "culture": null,
        "segment": null,
        "alias": "title",
        "value": "_Second Updated Title"
      }
    ],
    "variants": [
      {
        "state": "Draft",
        "publishDate": null,
        "scheduledPublishDate": null,
        "scheduledUnpublishDate": null,
        "id": "00000000-0000-0000-0000-000000000000",
        "flags": [],
        "createDate": "NORMALIZED_DATE",
        "updateDate": "NORMALIZED_DATE",
        "culture": null,
        "segment": null,
        "name": "_Test Document Properties"
      }
    ]
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-properties should update single property value 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully updated 1 property value(s)",
  "updatedProperties": [
    "title"
  ],
  "document": {
    "template": {
      "id": "907d26a5-c929-4c69-bb1d-0d0d5342d6f6"
    },
    "isTrashed": false,
    "documentType": {
      "id": "00000000-0000-0000-0000-000000000000",
      "icon": "icon-home color-blue",
      "collection": null
    },
    "id": "00000000-0000-0000-0000-000000000000",
    "flags": [],
    "values": [
      {
        "editorAlias": "Umbraco.TextBox",
        "culture": null,
        "segment": null,
        "alias": "title",
        "value": "_Updated Title"
      }
    ],
    "variants": [
      {
        "state": "Draft",
        "publishDate": null,
        "scheduledPublishDate": null,
        "scheduledUnpublishDate": null,
        "id": "00000000-0000-0000-0000-000000000000",
        "flags": [],
        "createDate": "NORMALIZED_DATE",
        "updateDate": "NORMALIZED_DATE",
        "culture": null,
        "segment": null,
        "name": "_Test Document Properties"
      }
    ]
  }
}",
      "type": "text",
    },
  ],
}
`;
